--- a/assets/css/safetyofvisitors.css
+++ b/assets/css/safetyofvisitors.css
@@ -13,11 +13,10 @@ body{
 }
 .navbar ul li{
 	display:inline;
-	margin-top:50%;
 	margin:20px;
 }
 .navbar ul li a{
-font-family:'Open Sans';
+font-family:'Open Sans', sans-serif;
 text-decoration:none;
 padding:10px;
 border-bottom: #ff5757;
@@ -28,7 +27,6 @@ margin-top: 10px;
 	border-bottom:2px solid #ff5757;
 } 
 .header button{
-	text-align:center;
 	font-size:15px;	
     background-color:#ff5757;
 	color:white;
@@ -48,13 +46,12 @@ margin-top: 10px;
 }
 .safety-of-visitors{
 	text-align: center;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	font-size: 20px;
 	padding: 40px;
-	color: #ff5757;
 }
 .instructions {
-	font-family: 'Poppins';
+	font-family: 'Poppins', sans-serif;
     line-height: 32px;
 	width: 83%;
 }
@@ -66,7 +63,7 @@ margin-top: 10px;
 .instructions-for-peoples ul {
 	display: inline-block;
 	text-align: left;
-	font-family: 'Poppins';
+	font-family: 'Poppins', sans-serif;
     width: 70%;
 	line-height: 32px;
 }
@@ -75,13 +72,13 @@ margin-top: 10px;
 	
 }
 .general-tips h2{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	font-size: 29px;
 }
 .general-tips ul{
 	display: inline-block;
 	text-align: left;
-	font-family: 'Poppins';
+	font-family: 'Poppins', sans-serif;
     width: 70%;
 	line-height: 32px
 
@@ -90,12 +87,12 @@ margin-top: 10px;
 	text-align: center;
 }
 .water-quality h2{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	font-size: 29px;
 	text-align: center;
 }
 .water-quality p{
-	font-family: 'Poppins';
+	font-family: 'Poppins', sans-serif;
 	line-height: 32px;
 	width: 83%;
 	padding-left: 100px;
