--- a/assets/store css/whirttshirt.css
+++ b/assets/store css/whirttshirt.css
@@ -13,11 +13,10 @@ body{
 }
 .navbar ul li{
 	display:inline;
-	margin-top:50%;
 	margin:10px;
 }
 .navbar ul li a{
-font-family:'Open Sans';
+font-family:'Open Sans', sans-serif;
 text-decoration:none;
 padding:10px;
 font-size:15px;
@@ -30,7 +29,6 @@ margin-top:10px;
     border-bottom: 3px solid #ff5757;
 }
 .header button{
-	text-align:center;
 	font-size:15px;	
     background-color:#ff5757;
 	color:white;
@@ -61,17 +59,17 @@ margin-top:10px;
     margin-top: 80px;
 }
 .content h2{
-    font-family: 'league spartan';
+    font-family: 'league spartan', sans-serif;
     font-size: 40px;
     color: black;
 }
 .content h3{
-    font-family: 'league spartan';
+    font-family: 'league spartan', sans-serif;
     color: #ffa51d;
     font-size: 28px;
 }
 .content p{
-    font-family: 'poppins';
+    font-family: 'poppins', sans-serif;
 }
 input{
     padding: 14px 13px 14px 13px;
@@ -93,13 +91,13 @@ input{
 	border-radius: 40px;
 	cursor: pointer;
 	font-size: 18px;
-	font-family: 'League Spartan';
+	font-family: 'League Spartan', sans-serif;
 }
 .content h4{
-    font-family: 'poppins';
+    font-family: 'poppins', sans-serif;
 }
 .relatable{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	margin-left: 100px;
 	margin-top: 80px;
 	font-size: 25px;
@@ -107,7 +105,6 @@ input{
 .related-pics{
 	padding: 15px;
 	display: flex;
-	flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: space-evenly;
 }
@@ -116,11 +113,15 @@ input{
 	transform: scale(1.1);
 }
 .related-pics h3{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 
 }
+.product-img a{
+	text-decoration: none;
+	color: black;
+}
 .related-pics p{
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 	color: #ffa51d;
 }
 
@@ -132,7 +133,7 @@ input{
 }
 
 .subscribe h1{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	font-size: 48px;
 	width: 400px;
 }
@@ -154,7 +155,7 @@ input{
 	border-radius: 80pc;
     background-color: #ffa51d;
 	border: #ffa51d;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	padding: 20px 30px 20px 30px;
 	color: white;
 	cursor: pointer;
@@ -177,11 +178,10 @@ input{
 
 footer{
 	background-color: #121a21;
-	padding:0px;
 	text-align:center;
-	justify-content:space-evenly;
+	/* justify-content:space-evenly;
 	left:0;
-	width:100%;
+	width:100%; */
 }
 .footer-logo{
 	width: 180px;
@@ -194,11 +194,11 @@ footer{
 	padding: 0px 0px 30px 0px;
 }
 .address h3, .open-hours h3, .contact-for-more h3{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	color: #ffa51d;
 }
 .address p, .contact-for-more p, .open-hours p{
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 	color: white;
 	width: 300px;
 }
@@ -246,7 +246,7 @@ footer{
 }
 .navbar-footer ul li{
 	list-style: none;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 }
 .navbar-footer a:hover{
 	color:#ff5757;
@@ -258,7 +258,7 @@ footer{
 }
 .other-navbar-footer ul li{
 	padding: 10px;
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	list-style: none;
 }
 .other-navbar-footer ul li a{
@@ -270,7 +270,7 @@ footer{
 }
 .copyright{
 	text-align: center;
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 	color: #eee;
 	padding: 20px;
 }
