--- a/assets/book now css/final-book-now.css
+++ b/assets/book now css/final-book-now.css
@@ -12,11 +12,10 @@ body{
 }
 .navbar ul li{
 	display:inline;
-	margin-top:50%;
 	margin:10px;
 }
 .navbar ul li a{
-font-family:'Open Sans';
+font-family:'Open Sans, sans-serif';
 text-decoration:none;
 padding:10px;
 font-size:15px;
@@ -32,9 +31,8 @@ margin-top:10px;
 	padding:15px;
 	border:none;
 	margin-right:80px;
-	
 }
 .header button a{
 	text-decoration: none;
-	color: #f6f6f6;
+	color:white;
 }
