--- a/assets/css/greeninitiatives.css
+++ b/assets/css/greeninitiatives.css
@@ -13,16 +13,14 @@ body{
 }
 .navbar ul li{
 	display:inline;
-	margin-top:50%;
 	margin:10px;
 }
 .navbar ul li a{
-font-family:'Open Sans';
+font-family:'Open Sans', sans-serif;
 text-decoration:none;
 padding:10px;
 font-size:15px;
 margin-top:10px;
-position:sticky;
 }
 .navbar ul li a:hover {
 	border-bottom:3px solid #ff5757;
@@ -47,19 +45,19 @@ position:sticky;
 	padding-top: 50px;
 }
 .privacy{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 	text-align: center;
 	font-size: 26px;
 	color: black;
 }
 .privacy-2{
-    font-family: 'league spartan';
+    font-family: 'league spartan', sans-serif;
 	text-align: center;
     font-size: 20px;
 }
 
 .instructions {
-	font-family: 'Poppins';
+	font-family: 'Poppins', sans-serif;
     line-height: 32px;
 	width: 83%;
 }
@@ -71,7 +69,7 @@ position:sticky;
 .instructions-for-people ul {
 	display: inline-block;
 	text-align: left;
-	font-family: 'Poppins';
+	font-family: 'Poppins', sans-serif;
     width: 70%;
 	line-height: 32px;
 }
