--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -1,6 +1,14 @@
 body{
 	margin:0;
 }
+.dropdown-content{
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+}
 .header{ 
 	display:flex;
 	justify-content:space-between;
