--- a/assets/store css/proceedcheckout.css
+++ b/assets/store css/proceedcheckout.css
@@ -14,11 +14,10 @@ body{
 
 .navbar ul li{
 	display:inline;
-	margin-top:50%;
 	margin:10px;
 }
 .navbar ul li a{
-font-family:'Open Sans';
+font-family:'Open Sans', sans-serif;
 text-decoration:none;
 padding:10px;
 font-size:15px;
@@ -31,7 +30,6 @@ margin-top:10px;
     border-bottom: 3px solid #ff5757;
 }
 .header button{
-	text-align:center;
 	font-size:15px;	
     background-color:#ff5757;
 	border-radius:8px;
@@ -49,24 +47,24 @@ margin-top:10px;
 	padding-top: 100px;
 }
 .congrats h2{
-    font-family: 'league spartan';
+    font-family: 'league spartan', sans-serif;
 }
 .congrats p{
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 	color: #ff4612;
 }
 
 .delivery h3{
-	font-family: 'league spartan';
+	font-family: 'league spartan', sans-serif;
 
 } 
 .delivery p, .status p{
-	font-family: 'poppins';
+	font-family: 'poppins', sans-serif;
 	
 } 
 
 .status h3{
-	font-family: 'League spartan';
+	font-family: 'League spartan', sans-serif;
 }
 .btn-cancel{
 	background-color: #ffa51d;
@@ -77,7 +75,7 @@ margin-top:10px;
 	padding-left: 40px;
 	padding-right: 40px;
 	font-size: 18px;
-	font-family: 'League Spartan';
+	font-family: 'League Spartan', sans-serif;
     margin-top: 50px;
 }
 
